--- a/.github/workflows/docs.yaml
+++ b/.github/workflows/docs.yaml
@@ -8,7 +8,7 @@ defaults:
     shell: bash
 
 jobs:
-  deploy:
+  check_docs:
     runs-on: [dataplane, self-hosted, linux, x64, small]
     steps:
       - name: Checkout
