--- a/.github/workflows/fmt.yaml
+++ b/.github/workflows/fmt.yaml
@@ -8,7 +8,7 @@ defaults:
     shell: bash
 
 jobs:
-  check_docs:
+  fmt:
     runs-on: [dataplane, self-hosted, linux, x64, small]
     steps:
       - name: Checkout
