--- a/.github/workflows/tidy.yaml
+++ b/.github/workflows/tidy.yaml
@@ -8,7 +8,7 @@ defaults:
     shell: bash
 
 jobs:
-  fmt:
+  tidy:
     runs-on: [dataplane, self-hosted, linux, x64, small]
     steps:
       - name: Checkout
