--- a/.github/workflows/tidy.yaml
+++ b/.github/workflows/tidy.yaml
@@ -20,7 +20,7 @@ jobs:
           go-version: "1.22.5"
           cache: true
 
-      - name: Run fmt
+      - name: Run go mod tidy
         run: go mod tidy
 
       - name: Check for changes
