--- a/.github/workflows/prepare-release.yaml
+++ b/.github/workflows/prepare-release.yaml
@@ -1,9 +1,14 @@
-name: Make a new release
+name: Prepare for release
 
 on:
   push:
     branches:
-      - 'releases/v*'
+      - release-automation
+  workflow_dispatch:
+    inputs:
+      version:
+        required: true
+        description: "The semver formatted version for the new release"
 
 defaults:
   run:
@@ -21,9 +26,13 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Bump provider version in examples
+        id: bump
         run: |
-          # strip "releases/v" prefix from branch name. We're left with the plain semver i.e. "1.2.3".
-          version="${GITHUB_REF_NAME#"releases/v"}"
+          #version="${{ inputs.logLevel }}"
+          version="0.2.2"
+          
+          # strip any leading "v" from the release.
+          version="${version#v}"
           
           # validate semver.
           if [[ $version =~ ^(0|[1-9][0-9]*)\.(0|[1-9][0-9]*)\.(0|[1-9][0-9]*)(-((0|[1-9][0-9]*|[0-9]*[a-zA-Z-][0-9a-zA-Z-]*)(\.(0|[1-9][0-9]*|[0-9]*[a-zA-Z-][0-9a-zA-Z-]*))*))?(\+([0-9a-zA-Z-]+(\.[0-9a-zA-Z-]+)*))?$ ]]; then
@@ -32,6 +41,8 @@ jobs:
             echo "Invalid semver $version in branch name"
             exit 1
           fi
+          
+          echo "release-version=${version}" >> $GITHUB_OUTPUT
           
           # Bump semver in examples
           export CLICKHOUSE_TERRAFORM_PROVIDER_VERSION="$version"
@@ -44,10 +55,13 @@ jobs:
           done
 
       - name: Open PR with changes
+        id: pr
         uses: peter-evans/create-pull-request@v6
         with:
-          branch: "bump-provider-version-in-examples"
-          title: "Bump provider version in examples"
+          branch: "bump-provider-to-${{ steps.bump.outputs.release-version }}"
+          title: "[RELEASE ${{ steps.bump.outputs.release-version }}] Bump provider version in examples"
           assignees: $GITHUB_ACTOR
           reviewers: $GITHUB_ACTOR
 
+      - name: Enable Pull Request Automerge
+        run: gh pr merge --merge --auto "${{ steps.pr.outputs.pull-request-number }}"
