--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -1,4 +1,4 @@
-name: Create release tag
+name: Release
 
 on:
   push:
@@ -10,10 +10,13 @@ defaults:
     shell: bash
 
 jobs:
-  release:
+  release-tag:
     permissions:
       contents: write
       pull-requests: write
+
+    outputs:
+      version: ${{ steps.check.outputs.release-version }}
 
     runs-on: [dataplane, self-hosted, linux, x64, small]
     steps:
@@ -55,3 +58,34 @@ jobs:
           tag="v${{ steps.check.outputs.release-version }}"
           git tag $tag
           git push origin $tag
+
+  goreleaser:
+    runs-on: ubuntu-latest
+    needs: [ "release-tag" ]
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+        with:
+          ref: ${{needs.release-tag.outputs.version}}
+
+      - name: Setup go
+        uses: actions/setup-go@v5
+        with:
+          go-version: "1.22.5"
+          cache: true
+
+      - name: Import GPG key
+        uses: crazy-max/ghaction-import-gpg@v6
+        id: import_gpg
+        with:
+          gpg_private_key: ${{ secrets.GPG_PRIVATE_KEY }}
+          passphrase: ${{ secrets.PASSPHRASE }}
+
+      - name: Run GoReleaser
+        uses: goreleaser/goreleaser-action@v6
+        with:
+          args: release --clean
+        env:
+          # GitHub sets the GITHUB_TOKEN secret automatically.
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GPG_FINGERPRINT: ${{ steps.import_gpg.outputs.fingerprint }}
