--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -62,6 +62,7 @@ jobs:
   goreleaser:
     runs-on: ubuntu-latest
     needs: [ "release-tag" ]
+    if: ${{ needs.release-tag.outputs.version != 'null' }}
     steps:
       - name: Checkout
         uses: actions/checkout@v4
