--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -10,6 +10,8 @@ defaults:
     shell: bash
 
 jobs:
+  # Make a new tag out of main branch
+  # Only runs if latest comming on main is a release commit.
   release-tag:
     permissions:
       contents: write
@@ -59,9 +61,80 @@ jobs:
           git tag $tag
           git push origin $tag
 
+  # Begin e2e tests section
+  token:
+    needs: [ "release-tag" ]
+    if: ${{ needs.release-tag.outputs.version != 'null' }}
+    outputs:
+      token: ${{ steps.generate.outputs.token }}
+    runs-on: ubuntu-latest
+    steps:
+      - name: Generate
+        id: generate
+        run: |
+          token="$(date '+%s')"
+          echo "token=${token}" >> $GITHUB_OUTPUT
+
+  find-tf-releases:
+    needs: [ "release-tag" ]
+    if: ${{ needs.release-tag.outputs.version != 'null' }}
+    outputs:
+      releases: ${{ steps.find.outputs.releases }}
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+      - uses: ./.github/actions/find-tf-releases
+        id: find
+
+  e2e:
+    if: ${{ needs.release-tag.outputs.version != 'null' }}
+    needs: [ "token", "find-tf-releases" ]
+    runs-on: ubuntu-latest
+    continue-on-error: true
+    strategy:
+      fail-fast: false
+      max-parallel: 5
+      matrix:
+        test: [ "basic" ]
+        tf_release: ${{ fromJSON(needs.find-tf-releases.outputs.releases) }}
+        cloud_provider: [ "aws", "gcp", "azure" ]
+    steps:
+      - name: e2e
+        uses: ./.github/actions/e2e
+        with:
+          organization_id: ${{ secrets.TF_VAR_ORGANIZATION_ID }}
+          token_key: ${{ secrets.TF_VAR_TOKEN_KEY }}
+          token_secret: ${{ secrets.TF_VAR_TOKEN_SECRET }}
+          token: ${{needs.token.outputs.token}}
+          test_name: ${{ matrix.test }}
+          tf_release: ${{ matrix.tf_release }}
+          cloud_provider: ${{ matrix.cloud_provider }}
+
+  # Delete any leftover service that might have failed deleting
+  cleanup:
+    if: ${{ needs.release-tag.outputs.version != 'null' }}
+    runs-on: ubuntu-latest
+    needs: [ "e2e", "token" ]
+    continue-on-error: true
+    env:
+      organization_id: ${{ secrets.TF_VAR_ORGANIZATION_ID }}
+      token_key: ${{ secrets.TF_VAR_TOKEN_KEY }}
+      token_secret: ${{ secrets.TF_VAR_TOKEN_SECRET }}
+    steps:
+      - name: cleanup
+        uses: ./.github/actions/cleanup
+        with:
+          organization_id: ${{ secrets.TF_VAR_ORGANIZATION_ID }}
+          token_key: ${{ secrets.TF_VAR_TOKEN_KEY }}
+          token_secret: ${{ secrets.TF_VAR_TOKEN_SECRET }}
+          token: ${{needs.token.outputs.token}}
+  # End e2e tests section
+
+  # Make a new release of out the branch
   goreleaser:
     runs-on: ubuntu-latest
-    needs: [ "release-tag" ]
+    needs: [ "release-tag", "e2e" ]
     if: ${{ needs.release-tag.outputs.version != 'null' }}
     steps:
       - name: Checkout
