--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -102,6 +102,8 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v4
+        with:
+          ref: "v${{needs.release-tag.outputs.version}}"
       - name: e2e
         uses: ./.github/actions/e2e
         with:
