--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -137,7 +137,7 @@ jobs:
           token: ${{needs.token.outputs.token}}
   # End e2e tests section
 
-  # Make a new release of out the branch
+  # Make a new release out of the tag
   goreleaser:
     runs-on: ubuntu-latest
     needs: [ "release-tag", "e2e" ]
