Refactor examples structure. Run private link test as part of e2e

--- a/.github/actions/cleanup/action.yaml
+++ b/.github/actions/cleanup/action.yaml
@@ -17,7 +17,7 @@ inputs:
 runs:
   using: "composite"
   steps:
-    - name: cleanup
+    - name: cleanup clikchouse
       shell: bash
       run: |
         organization_id="${{ inputs.organization_id }}"
