--- a/.github/actions/e2e/action.yaml
+++ b/.github/actions/e2e/action.yaml
@@ -10,9 +10,9 @@ inputs:
   token_secret:
     required: true
     description: "The clickhouse token secret"
-  token:
+  service_name:
     required: true
-    description: "The unique token assigned to this e2e run"
+    description: "The unique name assigned to this test"
   test_name:
     required: true
     description: "The test name i.e. the name of the folder inside the examples dir"
@@ -30,12 +30,29 @@ inputs:
     required: false
     default: "false"
     description: "If true it runs tests out of last published terraform provider release"
-
+  aws_role_arn:
+    required: true
+    description: "The ARN of the AWS role to assume for AWS tests"
+  aws_region:
+    required: true
+    description: "The AWS region to use for AWS tests"
 runs:
   using: "composite"
   steps:
+    - shell: bash
+      id: defined
+      name: Check if test is defined for cloud provider
+      run: |
+        if [ -d "examples/full/${{ inputs.test_name }}/${{ inputs.cloud_provider }}" ]
+        then
+          echo "defined=true" >> "$GITHUB_OUTPUT"
+        else
+          echo "Test ${{ inputs.test_name }} is not available for ${{ inputs.cloud_provider }}"
+        fi
+
     - name: Setup go
       uses: actions/setup-go@v5
+      if: ${{steps.defined.outputs.defined == 'true' }}
       with:
         go-version-file: 'go.mod'
         cache: true
@@ -47,40 +64,59 @@ runs:
         terraform_wrapper: false
 
     - shell: bash
+      if: ${{steps.defined.outputs.defined == 'true' }}
       name: Show terraform version
       run: terraform version
 
+    - name: Configure AWS credentials
+      id: aws-auth
+      uses: aws-actions/configure-aws-credentials@v4
+      if: ${{ inputs.cloud_provider == 'aws' }}
+      with:
+        role-to-assume: ${{ inputs.aws_role_arn }}
+        aws-region: ${{ inputs.aws_region }}
+        output-credentials: true
+
     - shell: bash
+      if: ${{steps.defined.outputs.defined == 'true' }}
       name: Set env variables
       run: |
         echo "::group::Setting env variables"
-        test_type=""
-        if [ "${{inputs.upgrade_test}}" == "true" ]
-        then
-          test_type=" upgrade"
-        fi
-        service_name="[e2e${test_type}]-${{ inputs.test_name }}-${{ inputs.tf_release }}-${{ inputs.cloud_provider }}-${{ inputs.token }}"
         
-        echo "TF_VAR_organization_id=${{ inputs.organization_id }}" >> $GITHUB_ENV
-        echo "TF_VAR_token_key=${{ inputs.token_key }}" >> $GITHUB_ENV
-        echo "TF_VAR_token_secret=${{ inputs.token_secret }}" >> $GITHUB_ENV
-        echo "TF_VAR_service_name=${service_name}" >> $GITHUB_ENV
-        echo "TF_VAR_cloud_provider=${{ inputs.cloud_provider }}" >> $GITHUB_ENV
+        cat <<EOF >examples/full/${{ inputs.test_name }}/${{ inputs.cloud_provider }}/variables.tfvars
+        organization_id = "${{ inputs.organization_id }}"
+        token_key       = "${{ inputs.token_key }}"
+        token_secret    = "${{ inputs.token_secret }}"
+        service_name    = "${{ inputs.service_name }}"
+        EOF
+        
+        if [ "${{ inputs.cloud_provider }}" == "aws" ]
+        then
+          aws sts get-caller-identity
+        
+          cat <<EOF >>examples/full/${{ inputs.test_name }}/${{ inputs.cloud_provider }}/variables.tfvars
+        aws_region        = "${{ inputs.aws_region }}"
+        aws_key           = "${{ steps.aws-auth.outputs.aws-access-key-id }}"
+        aws_secret        = "${{ steps.aws-auth.outputs.aws-secret-access-key }}"
+        aws_session_token = "${{ steps.aws-auth.outputs.aws-session-token }}"
+        EOF
+        fi
+          
         echo "::endgroup::"
 
     - shell: bash
-      if: ${{ inputs.upgrade_test == 'true' }}
+      if: ${{ inputs.upgrade_test == 'true' && steps.defined.outputs.defined == 'true' }}
       name: Upgrade test - Run terraform using latest stable version
       run: |
         echo "::group::Run terraform using latest stable version"
-        cd "examples/${{ inputs.test_name }}"
+        cd "examples/full/${{ inputs.test_name }}/${{ inputs.cloud_provider }}"
         terraform init -input=false
-        terraform plan -no-color
-        terraform apply -no-color -auto-approve
+        terraform plan -no-color -var-file=variables.tfvars
+        terraform apply -no-color -auto-approve -var-file=variables.tfvars
         echo "::endgroup::"
 
     - shell: bash
-      if: ${{ inputs.skip_build == 'false' }}
+      if: ${{ inputs.skip_build == 'false' && steps.defined.outputs.defined == 'true' }}
       name: Build provider from branch and create terraformrc to use it
       run: |
         echo "::group::Build provider from branch and create terraformrc to use it"
@@ -98,20 +134,23 @@ runs:
         echo "::endgroup::"
 
     - shell: bash
+      if: ${{steps.defined.outputs.defined == 'true' }}
       name: Run terraform
       run: |
         echo "::group::Run terraform"
-        cd "examples/${{ inputs.test_name }}"
+        cd "examples/full/${{ inputs.test_name }}/${{ inputs.cloud_provider }}"
+                
         terraform init -input=false -upgrade
-        terraform plan -no-color
-        terraform apply -no-color -auto-approve
+        terraform plan -no-color -var-file=variables.tfvars
+        terraform apply -no-color -auto-approve -var-file=variables.tfvars
+        terraform refresh -no-color -var-file=variables.tfvars
         echo "::endgroup::"
 
     - shell: bash
       name: Terraform destroy
-      if: always()
+      if: ${{steps.defined.outputs.defined == 'true' }}
       run: |
         echo "::group::Run terraform destroy"
-        cd "examples/${{ inputs.test_name }}"
-        terraform destroy -no-color -auto-approve
+        cd "examples/full/${{ inputs.test_name }}/${{ inputs.cloud_provider }}"
+        terraform destroy -no-color -auto-approve -var-file=variables.tfvars
         echo "::endgroup::"
