--- a/examples/full/basic/azure/provider.tf.template
+++ b/examples/full/basic/azure/provider.tf.template
@@ -1,20 +1,13 @@
-# This file is generated automatically please do not edit
 terraform {
   required_providers {
     clickhouse = {
-      version = "0.3.0"
+      version = "${CLICKHOUSE_TERRAFORM_PROVIDER_VERSION}"
       source  = "ClickHouse/clickhouse"
     }
-
-    azapi = {
-      source  = "Azure/azapi"
-      version = "1.13.1"
-    }
-
   }
 }
 
-provider "clickhouse" {
+provider clickhouse {
   organization_id = var.organization_id
   token_key       = var.token_key
   token_secret    = var.token_secret
