--- a/examples/full/basic/gcp/provider.tf.template
+++ b/examples/full/basic/gcp/provider.tf.template
@@ -7,7 +7,7 @@ terraform {
   }
 }
 
-provider "clickhouse" {
+provider clickhouse {
   organization_id = var.organization_id
   token_key       = var.token_key
   token_secret    = var.token_secret
