--- a/examples/full/private_endpoint/aws/variables.tfvars.sample
+++ b/examples/full/private_endpoint/aws/variables.tfvars.sample
@@ -3,7 +3,7 @@ organization_id = "aee076c1-3f83-4637-95b1-ad5a0a825b71"
 token_key       = "avhj1U5QCdWAE9CA9"
 token_secret    = "4b1dROiHQEuSXJHlV8zHFd0S7WQj7CGxz5kGJeJnca"
 
-# azure 
-clickhouse_service_location = "westus3"
-resource_group_foo          = "tf-test-rg-foo"
-resource_group_bar          = "tf-test-rg-bar"
+# AWS 
+aws_key                      = "key"
+aws_secret                   = "secret"
+aws_region                   = "us-west-2"
