--- a/examples/full/private_endpoint/aws/provider.tf.template
+++ b/examples/full/private_endpoint/aws/provider.tf.template
@@ -1,16 +1,9 @@
-# This file is generated automatically please do not edit
 terraform {
   required_providers {
     clickhouse = {
-      version = "0.3.0"
+      version = "${CLICKHOUSE_TERRAFORM_PROVIDER_VERSION}"
       source  = "ClickHouse/clickhouse"
     }
-
-    azapi = {
-      source  = "Azure/azapi"
-      version = "1.13.1"
-    }
-
   }
 }
 
