--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -14,7 +14,7 @@ builds:
   flags:
     - -trimpath
   ldflags:
-    - '-s -w -X main.version={{.Version}} -X main.commit={{.Commit}}'
+    - '-s -w -X github.com/ClickHouse/terraform-provider-clickhouse/pkg/project.version={{.Version}} -X github.com/ClickHouse/terraform-provider-clickhouse/pkg/project.commit={{.Commit}}'
   goos:
     - freebsd
     - windows
