--- a/.github/actions/e2e/action.yaml
+++ b/.github/actions/e2e/action.yaml
@@ -105,9 +105,18 @@ runs:
         echo "::endgroup::"
 
     - shell: bash
+      id: get_latest_stable_release
+      if: ${{ inputs.upgrade_test == 'true' && steps.defined.outputs.defined == 'true' }}
+      name: Upgrade test - Retrieve latest stable version
+      run: |
+        LATEST="$(curl -s -L -H "Accept: application/vnd.github+json" -H "X-GitHub-Api-Version: 2022-11-28" https://api.github.com/repos/ClickHouse/terraform-provider-clickhouse/releases/latest | jq -r '.name')"
+        echo "tag=$LATEST" >> "$GITHUB_OUTPUT"
+
+    - shell: bash
       if: ${{ inputs.upgrade_test == 'true' && steps.defined.outputs.defined == 'true' }}
       name: Upgrade test - Run terraform using latest stable version
       run: |
+        git checkout tags/${{ steps.get_latest_stable_release.outputs.tag }}
         echo "::group::Run terraform using latest stable version"
         cd "examples/full/${{ inputs.test_name }}/${{ inputs.cloud_provider }}"
         terraform init -input=false
@@ -119,6 +128,7 @@ runs:
       if: ${{ inputs.skip_build == 'false' && steps.defined.outputs.defined == 'true' }}
       name: Build provider from branch and create terraformrc to use it
       run: |
+        git checkout ${{ github.ref }}        
         echo "::group::Build provider from branch and create terraformrc to use it"
         go get
         go build -o terraform-provider-clickhouse
