--- a/.github/workflows/e2e.yaml
+++ b/.github/workflows/e2e.yaml
@@ -56,6 +56,7 @@ jobs:
       - name: List examples
         id: list
         run: |
+          set -x
           examples="$(echo '[]' | jq .)"
           pushd examples/full
           idx=0
@@ -79,6 +80,7 @@ jobs:
             fi
           done
           popd
+          echo "${examples}"
           echo "examples=${examples}" >> "$GITHUB_OUTPUT"
 
   # Run e2e tests
